--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tele-chain",
-  "version": "1.0.0",
+  "version": "1.1.9",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -10,13 +10,17 @@
     "type": "git",
     "url": "https://github.com/derivativeDEV/tele-chain.git"
   },
-
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@alch/alchemy-web3": "^1.4.7",
     "alchemy-sdk": "^3.2.0",
     "ethers": "^6.11.1",
-    "tea-chalange": "^1.1.1"
+    "tea-chalange": "^1.1.1",
+    "tea-comunity-id": "^1.0.1",
+    "tea-contributors": "^1.0.3",
+    "tea-user": "^1.0.2"
   },
+  "homepage": "https://github.com/derivativeDEV/tele-chain.git",
   "source": "https://github.com/derivativeDEV/tele-chain.git"
 }
